# t3-cross-platform

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/auth-proxy/: package.json
apps/desktop/: eslint.config.js  package.json  tailwind.config.ts  tsconfig.json  tsr.config.json  vite.config.ts
apps/desktop/src/: main.tsx  routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: auth-showcase.tsx  posts.tsx
apps/desktop/src/hooks/: auth.tsx
apps/desktop/src/routes/: __root.tsx  index.tsx
apps/desktop/src/stores/: auth.ts
apps/desktop/src/trpc/: index.tsx
apps/desktop/src/util/: api.ts
apps/mobile/: metro.config.js  package.json  tsconfig.json
apps/mobile/src/app/: _layout.tsx
apps/mobile/src/utils/: api.tsx  auth.tsx  base-url.tsx
apps/web/: next.config.js  package.json
apps/web/src/: env.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/_components/: auth-showcase.tsx
apps/web/src/app/api/auth/[...nextauth]/: route.ts
apps/web/src/trpc/: server.ts
tooling/eslint/: package.json
tooling/github/setup/: action.yml
tooling/prettier/: package.json
tooling/tailwind/: package.json
